Search by all educational levels & and fix scrollbar in filters

--- a/assets/styles/forms.less
+++ b/assets/styles/forms.less
@@ -96,6 +96,7 @@
     height: auto;
     &:before {
       transform: translate(0, -50%) rotate(-90deg);
+      top: 25px;
     }
   }
 
