--- a/components/FilterCategories/FilterCategories.component.less
+++ b/components/FilterCategories/FilterCategories.component.less
@@ -84,14 +84,24 @@
   }
 
   &__items {
-    padding: 0;
-    margin: 0;
+    padding: 0 15px 0 0;
+    margin: 0 -15px 0 0;
     list-style: none;
     max-height: ~'calc(100vh - 300px)';
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     &--no-scroll {
       max-height: inherit;
+    }
+
+    &_wrapper {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      width:100%;
+      overflow:visible;
+      box-sizing:border-box;
     }
 
     &--masonry {
@@ -128,10 +138,10 @@
     display: flex;
     width: 100%;
 
-    &--empty {
-      opacity: 0.5;
-      pointer-events: none;
-    }
+    //&--empty {
+    //  opacity: 0.5;
+    //  pointer-events: none;
+    //}
 
     &_icon {
       &.cc-by {
